css/style.css
header{
    background-color: rgba(26, 245, 7, 0.696);
    text-align: center;
}

h3{
    font-size: 30px;
    text-align: center;
}

body {
    background-color: #f2f4f7;
}

* {
    font-family: sans-serif;
}
/* we can style every element on the page using the * selector. */

img {
    width: 50%;
    border-radius: 8px;
    display: block;
    margin: auto;
}

.subheader {
    font-weight: bold;
    font-size: 20px;
}

.button {
    background-color: #04AA6D;
    color: white;
    padding: 15px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    display: inline-block;
    margin: 10px;
}

#main_page_header {
    background-color: mistyrose;
    text-align: center;
}

#origin {
    width: 50%;
    background-color: lightblue;
    border: 1px solid black;
    padding: 10px;
}

#Cosmic_inflation {
    width: 50%;
    background-color: lightyellow;
    border: 1px solid black;
    padding: 10px;
}

#theories {
    display: flex;
    gap: 20px;
}

#Big_bang, #Recombination{
    background-color: rgb(111, 248, 241);
    flex: 1;
}

@media (max-width: 600px) {
    body {
        font-size: 16px;
    }
}

